# flow-matching

./: .gitignore  config.py  makefile  pyproject.toml  train.py  train_cifar10.py  train_mnist.py
config/: cifar10_config.yaml  mnist_config.yaml  train_config.yaml
model/: attention.py  position_embedding.py  resnet.py  unet.py
outputs/2024-10-22/23-11-42/.hydra/: config.yaml  hydra.yaml
outputs/2024-10-23/00-20-38/.hydra/: hydra.yaml
outputs/2024-10-23/00-49-46/.hydra/: config.yaml  hydra.yaml
outputs/2024-10-23/01-38-39/.hydra/: config.yaml  hydra.yaml
outputs/2024-10-23/10-02-30/.hydra/: hydra.yaml
outputs/2024-10-25/14-29-36/.hydra/: hydra.yaml
